# CacheSage-UC-NutShell-Cache-AI-HIL-

./: .gitignore  .mailmap  LICENSE  README.md  ai_hil_log.jsonl  pyproject.toml  review_journal.jsonl  upstream.lock.json
docs/: ai-defect-catalog.md  ai-human-collaboration.md  fault-injection.md  picker-toffee-flow.md  review-catalog.md  review-workflow.md  scoreboard-design.md  submission-checklist.md  ucagent-collaboration.md  upstream-survey.md  verification-plan.md
examples/: coverage_snapshot.json
integration/nutshell/: conftest.py  test_rtl_minimal.py  test_rtl_regression.py
reports/: CacheSage-UC-defense-demo.pptx  CacheSage-UC-verification-report.md  CacheSage-UC-verification-report.tex  fault-drop-dirty-writeback.json  fault-ignore-write-mask.json  fault-refill-shift.json  fault-stuck-replacement.json  fault-unstable-under-stall.json  initial-verification-report.md  linux-smoke-env.json  nutshell-smoke.json  nutshell-smoke.md  rtl-code-coverage.info  rtl-functional-coverage.json  rtl-functional-coverage.md  sample-run-seed11.json
scripts/: build_defense_ppt.mjs  build_defense_ppt.py  build_verification_pdf.py  fetch_upstream_example.py  generate_report.py  run_nutshell_smoke.py  run_rtl_regression.py
src/cachesage_uc/: __init__.py  cli.py  evidence.py  rtl_coverage.py  rtl_evidence.py  rtl_verification.py  (+1 more)
tests/: test_cli.py  test_defense_ppt_builder.py  test_evidence_model.py  test_public_materials.py  test_rtl_evidence.py  test_rtl_verification.py  test_upstream_and_adapter.py  test_verification_core.py  test_verification_pdf_report.py
(+4 files in other folders)
