[project]
name = "cachesage-uc"
version = "0.1.0"
description = "Coverage-guided AI-HIL verification evidence tooling for NutShell Cache."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "CacheSage-UC contributors" }
]
keywords = ["UCAgent", "Toffee", "Picker", "NutShell", "cache", "verification"]

[project.scripts]
cachesage-uc = "cachesage_uc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
